# robotic-priors

./: .gitignore  .gitmodules  CMakeLists.txt  install.sh  make.sh
lib/: download.sh
python/: .gitignore  CMakeLists.txt  Data Visualization.ipynb  data.py  generate_trajectories.py  main.py  reinforcement_learning.py  representation.py  representation_learning.py  requirements.txt  robotic_priors.py  run.sh  sai2.py  schedule.py  setup.py  setup.py.in  vae.py
python/configs/: dqn.py  pg.py
python/gym_sai2/: __init__.py
python/gym_sai2/envs/: sai2_env.py  sai2_env_cpp.py
resources/: mean_observation.npy
src/demo_project/: CMakeLists.txt  DemoProject.cpp  DemoProject.h
src/gym_sai2/: CMakeLists.txt  CSaiEnv.cpp  CSaiEnv.h  sai2_env_py.cpp
src/openai_gym/: CMakeLists.txt  CSaiEnv.cpp  CSaiEnv.h  SaiGym.cpp  SaiGym.h  sai2module.cpp  sai2pymodule.cpp
src/openai_gym/gym_sai2/: __init__.py
src/openai_gym/gym_sai2/envs/: __init__.py  sai2_env.py  sai2module.cpp
src/simulation/: CMakeLists.txt  Simulator.h
src/visualization/: CMakeLists.txt  visualizer_main.cpp
